# hgg_vbf_cp_codes

./: .gitignore  Dtilde  MCSamples.config  README  README.md  bkgTemplate.cxx  cats.cfg  common.sh  duplicToy.sh  fraction.csv  genSubmit.sh  h026_data.root  makeXml_cat.sh  mod_SS.sh  mod_app.sh  mod_yields.sh  toyGen.sh
shape_sys/: CMakeLists.txt  bkg_SS.csv  funcBkg  genSubmit.sh  gen_makeCat.sh  getMag.cxx  getMag_w1.cxx  makeXml_category.sh  makeXml_model_bkg.sh  makeXml_model_bkg_funcBias_Asi.sh  makeXml_model_sig.sh  makeXml_model_sig_Asi.sh  makeXml_model_sig_InjAsi.sh  mergeSys.sh  setup.sh  submitGen.sh  sysUtils.h
shape_sys/bak/: bak1.getMag.cxx
shape_sys/plotFit/: CMakeLists.txt  muVar.cxx  setup.sh  sigmaVar.cxx  variPlot_idvProc.cxx  variationPlot.cxx
shape_sys/plotFit/include/: LinkDef.h
yield_sys/: JER_variation.cxx  addMCstat_ggF.sh  addOtherHiggsUncer.sh  compile.sh  compile_w1.sh  dDep_variationYield.cxx  formcHW.sh  genSubmit.sh  genSubmit_jd.sh  gen_makeCat.sh  getMag.cxx  getMag_jd.cxx  getMag_w1.cxx  ioUtils.h  makeXml_category.sh  makeXml_top.sh  mergeSys.sh  mergeSys_jd.sh  quadraticSumKY.cxx  smeftUtils.h  submitGen.sh  variationYield.cxx
yield_sys/OOplot/: VBF.cxx  addupOOplot.py  addupOOplot_subBkg.py  alter_postfit_OO.py  asimovUncer.cxx  diphoton.cxx  getDataYields.cxx  ggF.cxx  integrateInPads.py  integrateInPadsV2.py  plotOOCompare.cxx  postfit_OO.py  sketch_OObinning.cxx  subToSR.sh  yieldDiphoton.cxx
yield_sys/SMEFT/: CPeven_kfactor.cxx  kfactor.cxx  quad_kfactor.cxx
yield_sys/TheorySys/: addShowerSys.sh  alpha_S_and_QCDrename.py  transformat.sh
yield_sys/plotFit/: variationPlot.cxx
